# headless-meeting-bot

./: .gitignore  CMakeLists.txt  README.md
jna/: .gitignore  build.gradle  release.sh
jna/src/main/java/com/zoom/jna/: ZoomSDK.java
lib/: .gitignore
server/: .gitignore  README.md  build.sh  go.mod  go.sum  test_audio_recorder.py
server/cmd/headless-meeting-bot/: main.go  manager.go  server.go  worker.go
server/docker/: .dockerignore  DOCKER.md  Dockerfile  Dockerfile.build  container-build.sh  docker-build.sh  docker-compose.build.yml  docker-compose.yml  entrypoint.sh  env.example
server/pkg/audio/: bus.go  frame.go  frame_test.go  pool.go
server/pkg/config/: config.go  errors.go
server/pkg/log/: logger.go
server/pkg/server/: http.go  protocol.go  router.go  ws.go
server/pkg/zoomsdk/: bridge.go  interface.go  manager.go  meeting.go
src/: CMakeLists.txt  Meeting.cpp  Meeting.h  MeetingConfig.cpp  MeetingConfig.h  SDKConfig.cpp  SDKConfig.h  ZoomSDK.cpp  ZoomSDK.h  demo.cpp
src/c_api/: demo.c  zoom_sdk_audio_delegate.cpp  zoom_sdk_audio_delegate.h  zoom_sdk_c.cpp  zoom_sdk_c.h  zoom_sdk_video_delegate.cpp  zoom_sdk_video_delegate.h
src/events/: AuthServiceEvent.cpp  AuthServiceEvent.h  MeetingRecordingCtrlEvent.cpp  MeetingRecordingCtrlEvent.h  MeetingReminderEvent.cpp  MeetingReminderEvent.h  MeetingServiceEvent.cpp  MeetingServiceEvent.h  MeetingShareEvent.cpp  MeetingShareEvent.h
src/util/: Logger.h
